--- a/base/templates/base/basic.html
+++ b/base/templates/base/basic.html
@@ -27,7 +27,7 @@
             <ul>
                 <li id="li-home"><a href="/"> Home </a></li>
                 <li id="li-about"><a  href="/about"> About </a></li>
-                <li id="li-add"><a  href="/add"> Add </a></li>
+                <li id="li-add"><a  href="/add"> Add Vehicle </a></li>
             </ul>
         </div>
         <div class="app__topbar">
