--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,6 +6,8 @@
 
 
 {% block content %}
+    {{ alert }}
+    {{ errors }}
     <div class="home-container">
         
         <h1> Vehicle List </h1>
