--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,8 +6,7 @@
 
 
 {% block content %}
-    {{ alert }}
-    {{ errors }}
+    
     <div class="home-container">
         
         <h1> Vehicle List </h1>
@@ -22,6 +21,7 @@
                         <th> Ignition </th>
                         <th> Average Speed </th>
                         <th class="text-center"> Update </th>
+                        <th class="text-center"> Delete </th>
                         <th class="text-center"> More Info </th>
                     </tr>
                 </thead>
@@ -42,6 +42,7 @@
                         
                             <td>{{ vehicle.avg_speed }} kmph</td>
                             <td class="btnTd"> <a class="updateBtn" href="/update/{{ vehicle.id }}">Update</a> </td>
+                            <td class="btnTd"> <a class="deleteBtn" href="/delete/{{ vehicle.id }}">Delete</a> </td>
                             <td class="btnTd"> <a class="readBtn" href="/vehicle/{{ vehicle.id }}">Read More</a> </td>
                         </tr>
                     {% endfor %}
